kustomize/base/admin-ui-deployment.yml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: admin-ui
  namespace: insource 
spec:  
  replicas: 1  
  selector:  
    matchLabels:  
      app: admin-ui  
  template:  
    metadata:  
      labels:  
        app: admin-ui
    spec:  
      containers:  
      - name: admin-ui
        image: warching/streamlit:latest
        ports:  
        - containerPort: 8501  
        command:  
        - /bin/bash  
        - -c  
        - |  
            CLONE_DIR="azure-openai-langchain-bot"  
            GIT_REPO="https://github.com/somethingwentwell/azure-openai-langchain-bot"  
            
            # Check if the directory exists  
            if [ -d "$CLONE_DIR" ]; then  
              # If the directory exists, update the repository  
              echo "Directory $CLONE_DIR exists."  
            else  
              # If the directory does not exist, clone the repository  
              echo "Cloning repository into $GIT_REPO..."  
              git clone "$GIT_REPO"  
            fi  
            export $(grep -v '^#' .env.test | xargs)
            cd azure-openai-langchain-bot/admin-ui
            streamlit run 0_📚_InSource_Home.py --server.fileWatcherType poll --server.port=8501 --server.address=0.0.0.0
        volumeMounts:  
          - name: shared-data  
            mountPath: /app
            subPath: azure-openai-langchain-bot
          - name: env-file  
            mountPath: /app/.env.test
            subPath: .env
      volumes:  
        - name: shared-data  
          persistentVolumeClaim:  
            claimName: pvc-insource-data
        - name: env-file  
          configMap:  
            name: env-file
