kustomize/base/postgres-deployment.yml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: postgres
  namespace: insource 
spec:  
  replicas: 1  
  selector:  
    matchLabels:  
      app: postgres  
  template:  
    metadata:  
      labels:  
        app: postgres  
    spec:  
      containers:  
        - name: db  
          image: postgres:15.2-alpine  
          ports:  
            - containerPort: 5432  
          volumeMounts:  
            - name: postgres-data  
              mountPath: /var/lib/postgresql/data  
            - name: init-config  
              mountPath: /docker-entrypoint-initdb.d  
      volumes:  
        - name: postgres-data  
          persistentVolumeClaim:  
            claimName: postgres-pv-claim  
        - name: init-config  
          configMap:  
            name: postgres-config
