kustomize/base/admin-api-service.yml
apiVersion: v1  
kind: Service  
metadata:  
  name: admin-api  
  namespace: insource
spec:  
  selector:  
    app: admin-api  
  ports:  
    - protocol: TCP  
      port: 80
      targetPort: 80
  type: ClusterIP
