kustomize/base/admin-ui-service.yml
apiVersion: v1  
kind: Service  
metadata:  
  name: admin-ui  
  namespace: insource
spec:  
  selector:  
    app: admin-ui  
  ports:  
    - protocol: TCP  
      port: 80
      targetPort: 8501
  type: ClusterIP
