kustomize/base/insource-service.yml
apiVersion: v1  
kind: Service  
metadata:  
  name: insource-api
  namespace: insource
spec:  
  selector:  
    app: insource-api
  ports:  
    - protocol: TCP  
      port: 80
      targetPort: 80
  type: ClusterIP
