kustomize/base/postgres-service.yml
apiVersion: v1  
kind: Service  
metadata:  
  name: postgres
  namespace: insource
spec:  
  selector:  
    app: postgres  
  ports:  
    - protocol: TCP  
      port: 5432  
      targetPort: 5432  
  type: ClusterIP
